# ft_printf

./: .gitignore  .main.c.swo  .main.c.swp  CMakeLists.txt  Makefile  README.md  main.c
incs/: ft_printf.h
libft/: Makefile
libft/includes/: libft.h
libft/incs/: libft.h
libft/srcs/: ft_atoi.c  ft_strsplit.c
srcs/: bonuses_1.c  csp.c  csp_module.c  diouxX.c  diouxX_module.c  dnum_utilities.c  exp_mant_explaining.c  expand_argument.c  float_module.c  ft_printf.c  handlers.c  main.c  num_utilities.c  parse_format_string.c  place_num.c  process_utilities.c  processings.c  some_bonuses.c  tables.c  utilities.c
